<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layoutTracker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imgOne"
            style="@style/ImageOk"
            android:src="@drawable/ic_platiie_orange" />

        <com.customer.views.CustomTextView
            android:id="@+id/txtpayment"
            style="@style/TextViewHome"
            android:layout_toEndOf="@id/imgOne"
            android:layout_toRightOf="@id/imgOne"
            android:text="@string/txtPaymentSuccess"
            android:textColor="@color/colorOrange"
            app:font_name="@string/font_regular" />


        <ImageView
            android:id="@+id/viewOne"
            style="@style/ImageViewHome"
            android:src="@drawable/ic_orange_line"
            android:layout_below="@id/imgOne" />


        <ImageView
            android:id="@+id/imgTwo"
            style="@style/ImageOk"
            android:layout_below="@id/viewOne"
            android:src="@drawable/ic_rec_food" />

        <com.customer.views.CustomTextView
            android:id="@+id/txtInKitchen"
            style="@style/TextViewHome"
            android:layout_below="@id/viewOne"
            android:layout_toEndOf="@id/imgTwo"
            android:layout_toRightOf="@id/imgTwo"
            android:text="@string/txtInKitchen"
            app:font_name="@string/font_regular" />


        <com.customer.views.CustomTextView
            android:id="@+id/txtDeliveryHint"
            style="@style/TextViewHome"
            android:layout_below="@id/txtInKitchen"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/imgTwo"
            android:layout_toRightOf="@id/imgTwo"
            android:text="@string/txtDeliveryAssigned"
            android:textColor="@color/colorText"
            android:textSize="10sp"
            app:font_name="@string/font_regular" />


        <View
            style="@style/ViewLine"
            android:layout_height="1dp"
            android:layout_below="@id/txtDeliveryHint"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/imgTwo"
            android:layout_toRightOf="@id/imgTwo" />


        <ImageView
            android:id="@+id/viewTwo"
            style="@style/ImageViewHome"
            android:layout_below="@id/imgTwo" />


        <ImageView
            android:id="@+id/imgThree"
            style="@style/ImageOk"
            android:layout_below="@id/viewTwo"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_re_bag" />

        <com.customer.views.CustomTextView
            android:id="@+id/initTeliver"
            style="@style/TextViewHome"
            android:layout_below="@id/viewTwo"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@id/imgThree"
            android:layout_toRightOf="@id/imgThree"
            android:text="@string/txtOnRoute"
            app:font_name="@string/font_regular" />


        <ImageView
            android:id="@+id/viewThree"
            style="@style/ImageViewHome"
            android:layout_below="@id/imgThree" />


        <ImageView
            android:id="@+id/imgFour"
            style="@style/ImageOk"
            android:layout_below="@id/viewThree"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_re_ok" />

        <com.customer.views.CustomTextView
            android:id="@+id/txtDelivered"
            style="@style/TextViewHome"
            android:layout_below="@id/viewThree"
            android:layout_toEndOf="@id/imgThree"
            android:layout_toRightOf="@id/imgThree"
            android:text="@string/txtOrderDeivered"
            app:font_name="@string/font_regular" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutdelivered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:paddingTop="50dp"
            android:src="@drawable/ic_telivered" />

        <com.customer.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:text="@string/txtOrderDeivered"
            android:textSize="18sp"
            app:font_name="@string/font_bold" />


    </LinearLayout>


</LinearLayout>